use java 17 feature